--- a/progetto4.ipynb
+++ b/progetto4.ipynb
@@ -12,8 +12,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T14:51:57.188459Z",
-     "start_time": "2025-11-26T14:51:57.182088Z"
+     "end_time": "2025-11-26T15:33:26.084522Z",
+     "start_time": "2025-11-26T15:33:26.078402Z"
     }
    },
    "cell_type": "code",
@@ -44,7 +44,7 @@
    ],
    "id": "c45a083a645c8b54",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -55,56 +55,77 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T14:52:31.954979Z",
-     "start_time": "2025-11-26T14:51:57.205301Z"
+     "end_time": "2025-11-26T15:33:46.942141Z",
+     "start_time": "2025-11-26T15:33:26.102999Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Lista delle iscrizioni: ogni elemento è tuple (id_Studente, id_corso)\n",
-    "iscriozioni = []\n",
+    "# ================================\n",
+    "# LISTA DELLE ISCRIZIONI\n",
+    "# Ogni iscrizione è una tupla: (ID_studente, ID_corso)\n",
+    "# ================================\n",
+    "iscrizioni = []\n",
     "\n",
+    "# Ciclo principale\n",
     "while True:\n",
+    "\n",
+    "    # Mostra i corsi disponibili\n",
     "    print(\"\\nCorsi disponibili:\")\n",
-    "    for id_Corso, nome  in corsi.items():\n",
-    "        print(id_Corso, \"_\", nome)\n",
+    "    for id_corso, nome in corsi.items():\n",
+    "        print(id_corso, \"_\", nome)\n",
     "\n",
-    "    # input: id_studente\n",
-    "    s = input(\"Inserisci l'Id dello studente (0) per uscire\")\n",
+    "    # -------------------------------------\n",
+    "    # INPUT: ID dello studente\n",
+    "    # -------------------------------------\n",
+    "    s = input(\"Inserisci l'ID dello studente (0 per uscire): \")\n",
+    "\n",
     "    if s == \"0\":\n",
-    "        break\n",
+    "        break   # esce dal ciclo\n",
     "\n",
-    "\n",
-    "    #esce dal ciclo principale\n",
-    "    if not s.isdigit():\n",
-    "        print(\"L'Id dello studente non valido (Deve essere un numero )\")\n",
+    "    if not s.isdigit():  # verifica se è un numero\n",
+    "        print(\"❌ L'ID dello studente non è valido (deve essere un numero).\")\n",
     "        continue\n",
     "\n",
     "    id_studente = int(s)\n",
     "\n",
-    "    # input: dell'id del corso\n",
-    "    c = input(\"Inserisci l'id del corso a cui scrivere lo studente:\").strip()\n",
-    "    print(\"Id corso non valido (Deve essere un numero )\")\n",
-    "    continue\n",
+    "    # Controlla se lo studente esiste\n",
+    "    if id_studente not in studenti:\n",
+    "        print(\"❌ Studente non trovato!\")\n",
+    "        continue\n",
+    "\n",
+    "    # -------------------------------------\n",
+    "    # INPUT: ID del corso\n",
+    "    # -------------------------------------\n",
+    "    c = input(\"Inserisci l'ID del corso a cui iscrivere lo studente: \")\n",
+    "\n",
+    "    if not c.isdigit():  # verifica se è un numero\n",
+    "        print(\"❌ ID corso non valido (deve essere un numero).\")\n",
+    "        continue\n",
     "\n",
     "    id_corso = int(c)\n",
     "\n",
-    "    # controllo: se esiste il corso\n",
+    "    # Controlla se il corso esiste\n",
     "    if id_corso not in corsi:\n",
-    "        print(\"Corso non trovato\")\n",
+    "        print(\"❌ Corso non trovato!\")\n",
     "        continue\n",
     "\n",
-    "    # controllo: per evitare iscrizioni duplicate\n",
-    "    if (id_studente, id_corso) in iscriozioni:\n",
-    "        print(\"Lo studente già scritto a questo corso!\")\n",
+    "    # -------------------------------------\n",
+    "    # CONTROLLO DUPLICATI\n",
+    "    # -------------------------------------\n",
+    "    if (id_studente, id_corso) in iscrizioni:\n",
+    "        print(\"⚠️ Lo studente è già iscritto a questo corso.\")\n",
     "    else:\n",
-    "        iscriozioni.append((id_studente, id_corso))\n",
-    "        print(f\"Iscrizione avvenuta  {id_studente} - {id_corso}\")\n",
+    "        iscrizioni.append((id_studente, id_corso))\n",
+    "        print(f\"🎉 Iscrizione avvenuta: {id_studente} → {id_corso}\")\n",
     "\n",
-    "    # al termine mostra tutte le iscrizioni\n",
-    "    print('\\nIscrizioni totali:')\n",
-    "    for s, c in iscriozioni:\n",
-    "        print(f\"Studente {[studenti[s]]} -> Corso {corsi[c]}\")"
+    "    # -------------------------------------\n",
+    "    # MOSTRA TUTTE LE ISCRIZIONI\n",
+    "    # -------------------------------------\n",
+    "    print(\"\\nIscrizioni totali:\")\n",
+    "    for s_id, c_id in iscrizioni:\n",
+    "        stud = studenti[s_id]    # prendo il dizionario dello studente\n",
+    "        print(f\"{stud['nome']} {stud['Cognome']} → {corsi[c_id]}\")"
    ],
    "id": "62de6f303255749d",
    "outputs": [
@@ -117,7 +138,10 @@
       "10 _ Introduzione a Python\n",
       "11 _ Data Analytics con Python\n",
       "12 _ Sql Server Avanzato\n",
-      "Id corso non valido (Deve essere un numero )\n",
+      "🎉 Iscrizione avvenuta: 100 → 11\n",
+      "\n",
+      "Iscrizioni totali:\n",
+      "Anna Barco → Data Analytics con Python\n",
       "\n",
       "Corsi disponibili:\n",
       "10 _ Introduzione a Python\n",
@@ -126,13 +150,13 @@
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T14:52:32.030266Z",
-     "start_time": "2025-11-26T14:52:32.026067Z"
+     "end_time": "2025-11-26T15:33:46.977003Z",
+     "start_time": "2025-11-26T15:33:46.974234Z"
     }
    },
    "cell_type": "code",
