--- a/CrudStudenti.ipynb
+++ b/CrudStudenti.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-28T15:22:52.096652Z",
-     "start_time": "2025-11-28T15:22:52.091885Z"
+     "end_time": "2025-11-28T16:49:36.058226Z",
+     "start_time": "2025-11-28T16:49:36.006816Z"
     }
    },
    "source": [
@@ -34,7 +34,7 @@
     "\"\"\""
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 58
   },
   {
    "metadata": {},
@@ -45,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-28T15:22:52.114868Z",
-     "start_time": "2025-11-28T15:22:52.107639Z"
+     "end_time": "2025-11-28T16:49:36.112936Z",
+     "start_time": "2025-11-28T16:49:36.083415Z"
     }
    },
    "cell_type": "code",
@@ -64,7 +64,7 @@
    ],
    "id": "fb5046ae9e1e5dab",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 59
   },
   {
    "metadata": {},
@@ -75,8 +75,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-28T15:22:52.133781Z",
-     "start_time": "2025-11-28T15:22:52.125894Z"
+     "end_time": "2025-11-28T16:49:36.139709Z",
+     "start_time": "2025-11-28T16:49:36.126636Z"
     }
    },
    "cell_type": "code",
@@ -85,7 +85,7 @@
     "    \"\"\"Inserisce un nuovo studente nel db \"\"\"\n",
     "    nome = e_nome.get().strip() # legge il nome\n",
     "    cognome = e_cognome.get().strip() # legge il cognome\n",
-    "    # data_nascita = e_datanascita.get().strip() # legge la data di nascita\n",
+    "    data_nascita = e_datanascita.get().strip() # legge la data di nascita\n",
     "    email = e_mail.get().strip() # leggge l'inddirizzo mail\n",
     "\n",
     "    # Controllo compi vuoti\n",
@@ -98,11 +98,11 @@
     "        cursor = conn.cursor()\n",
     "\n",
     "        sql = \"\"\"\n",
-    "                    INSERT INTO Studente (NomeStudente, CognomeStudente, DataNascita, Email)\n",
-    "                    VALUES (?, ?, ?, ?)\n",
+    "                INSERT INTO Studente (NomeStudente, CognomeStudente, DataNascita, Email)\n",
+    "                VALUES (?, ?, ?, ?)\n",
     "                \"\"\"\n",
     "\n",
-    "        cursor.execute(sql, (nome, cognome, email))\n",
+    "        cursor.execute(sql, (nome, cognome, data_nascita, email))\n",
     "        conn.commit() # salvare le modifiche\n",
     "        conn.close()  # chiude la connessione\n",
     "        messagebox.showinfo(\"Ok\", \"Studente inserito!\") # confermo\n",
@@ -112,7 +112,7 @@
    ],
    "id": "2544c29a79201205",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 60
   },
   {
    "metadata": {},
@@ -123,8 +123,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-28T15:23:00.038740Z",
-     "start_time": "2025-11-28T15:22:52.146650Z"
+     "end_time": "2025-11-28T16:49:42.830799Z",
+     "start_time": "2025-11-28T16:49:36.151904Z"
     }
    },
    "cell_type": "code",
@@ -133,17 +133,19 @@
     "# GUI\n",
     "win = tk.Tk()\n",
     "win.title(\"Gestione Studente\")\n",
-    "win.geometry(\"600x400\")\n",
+    "win.geometry(\"700x600\")\n",
     "\n",
     "# Etichette\n",
     "ttk.Label(win, text=\"Nome\").grid(row=0, column=0, padx=5, pady=5)\n",
     "ttk.Label(win, text=\"Cognome\").grid(row=0, column=1, padx=5, pady=5)\n",
-    "ttk.Label(win, text=\"Email\").grid(row=0, column=2, padx=5, pady=5)\n",
+    "ttk.Label(win, text=\"DataNascita\").grid(row=0, column=2, padx=5, pady=5)\n",
+    "ttk.Label(win, text=\"Email\").grid(row=0, column=3, padx=5, pady=5)\n",
     "\n",
     "# Campi input\n",
     "e_nome = ttk.Entry(win); e_nome.grid(row=1, column=0, padx=5, pady=5)\n",
     "e_cognome = ttk.Entry(win); e_cognome.grid(row=1, column=1, padx=5, pady=5)\n",
-    "e_mail = ttk.Entry(win); e_mail.grid(row=1, column=2, padx=5, pady=5)\n",
+    "e_datanascita = ttk.Entry(win); e_datanascita.grid(row=1, column=2, padx=5, pady=5)\n",
+    "e_mail = ttk.Entry(win); e_mail.grid(row=1, column=3, padx=5, pady=5)\n",
     "\n",
     "# Pulsanti\n",
     "ttk.Button(win, text=\"Mostra\", command=mostra).grid(row=2, column=0, padx=5, pady=10)\n",
@@ -151,28 +153,19 @@
     "\n",
     "# Area testo per mostrare dati\n",
     "box = tk.Text(win, width=70, height=15)\n",
-    "box.grid(row=3, column=0, columnspan=3, padx=10, pady=10)\n",
+    "box.grid(row=4, column=0, columnspan=4, padx=10, pady=10)\n",
     "\n",
     "win.mainloop()\n"
    ],
    "id": "c5248cfe9540243e",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\salis\\AppData\\Local\\Temp\\ipykernel_32232\\2387142165.py:5: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(\"SELECT * FROM Studente\", conn)  # Query con Pandas\n"
-     ]
-    }
-   ],
-   "execution_count": 33
+   "outputs": [],
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-28T15:23:00.093190Z",
-     "start_time": "2025-11-28T15:23:00.090275Z"
+     "end_time": "2025-11-28T16:49:42.894378Z",
+     "start_time": "2025-11-28T16:49:42.886974Z"
     }
    },
    "cell_type": "code",
